tests/positive/StdlibList/Data/Ord.mjuvix
module Data.Ord;
    inductive Ordering {
      LT : Ordering;
      EQ : Ordering;
      GT : Ordering;
    };
end;
