tests/negative/StdlibConflict/Stdlib/Data/Bool.mjuvix
module Stdlib.Data.Bool;

end;
